--- a/index.html
+++ b/index.html
@@ -70,33 +70,140 @@
           <li><div class="dot"></div></li>
         </ul>
         <div class="SliderBtns">
-          <button class="sliderBtn">
+          <button class="sliderBtn previous">
             <img src="./images/btnL.svg" alt="на предыдущий слайд" />
           </button>
-          <button class="sliderBtn">
+          <button class="next">
             <img src="./images/btnR.svg" alt="на следующий слайд" />
           </button>
         </div>
-        <img
-          class="sliderImg"
-          src="./images/sliderSpruce.jpg"
-          alt="Деревянный забор Ёлочка"
-        />
-        <div class="sliderInfo">
-          <div class="sliderInfoWrapper">
-            <h3 class="sliderTitle">Деревянный забор “Ёлочка”</h3>
-            <p class="sliderDesc">
-              Ёлочка относится к горизонтальному типу заборов, то есть доски
-              кладутся параллельно поверхности земли. Своё название она получила
-              по понятной причине: в профиль напоминает елку с детского рисунка.
-            </p>
+        <div class="sliderLine" id="sliderLine">
+          <div class="sliderPage">
+            <img
+              class="sliderImg"
+              src="./images/sliderSpruce.jpg"
+              alt="Деревянный забор Ёлочка"
+            />
+            <div class="sliderInfo">
+              <div class="sliderInfoWrapper">
+                <h3 class="sliderTitle">Деревянный забор “Ёлочка”</h3>
+                <p class="sliderDesc">
+                  Ёлочка относится к горизонтальному типу заборов, то есть доски
+                  кладутся параллельно поверхности земли. Своё название она
+                  получила по понятной причине: в профиль напоминает елку с
+                  детского рисунка.
+                </p>
+              </div>
+              <button class="sliderOrderBtn">заказать</button>
+            </div>
           </div>
-          <button class="sliderOrderBtn">заказать</button>
+          <div class="sliderPage">
+            <img
+              class="sliderImg"
+              src="./images/bannerMin.png"
+              alt="Деревянный забор Ёлочка"
+            />
+            <div class="sliderInfo">
+              <div class="sliderInfoWrapper">
+                <h3 class="sliderTitle">Деревянный забор “Ёлочка”</h3>
+                <p class="sliderDesc">
+                  Ёлочка относится к горизонтальному типу заборов, то есть доски
+                  кладутся параллельно поверхности земли. Своё название она
+                  получила по понятной причине: в профиль напоминает елку с
+                  детского рисунка.
+                </p>
+              </div>
+              <button class="sliderOrderBtn">заказать</button>
+            </div>
+          </div>
+          <div class="sliderPage">
+            <img
+              class="sliderImg"
+              src="./images/sliderSpruce.jpg"
+              alt="Деревянный забор Ёлочка"
+            />
+            <div class="sliderInfo">
+              <div class="sliderInfoWrapper">
+                <h3 class="sliderTitle">Деревянный забор “Ёлочка”</h3>
+                <p class="sliderDesc">
+                  Ёлочка относится к горизонтальному типу заборов, то есть доски
+                  кладутся параллельно поверхности земли. Своё название она
+                  получила по понятной причине: в профиль напоминает елку с
+                  детского рисунка.
+                </p>
+              </div>
+              <button class="sliderOrderBtn">заказать</button>
+            </div>
+          </div>
+          <div class="sliderPage">
+            <img
+              class="sliderImg"
+              src="./images/bannerMin.png"
+              alt="Деревянный забор Ёлочка"
+            />
+            <div class="sliderInfo">
+              <div class="sliderInfoWrapper">
+                <h3 class="sliderTitle">Деревянный забор “Ёлочка”</h3>
+                <p class="sliderDesc">
+                  Ёлочка относится к горизонтальному типу заборов, то есть доски
+                  кладутся параллельно поверхности земли. Своё название она
+                  получила по понятной причине: в профиль напоминает елку с
+                  детского рисунка.
+                </p>
+              </div>
+              <button class="sliderOrderBtn">заказать</button>
+            </div>
+          </div>
+          <div class="sliderPage">
+            <img
+              class="sliderImg"
+              src="./images/sliderSpruce.jpg"
+              alt="Деревянный забор Ёлочка"
+            />
+            <div class="sliderInfo">
+              <div class="sliderInfoWrapper">
+                <h3 class="sliderTitle">Деревянный забор “Ёлочка”</h3>
+                <p class="sliderDesc">
+                  Ёлочка относится к горизонтальному типу заборов, то есть доски
+                  кладутся параллельно поверхности земли. Своё название она
+                  получила по понятной причине: в профиль напоминает елку с
+                  детского рисунка.
+                </p>
+              </div>
+              <button class="sliderOrderBtn">заказать</button>
+            </div>
+          </div>
         </div>
       </div>
       <!-- <div class="dot"></div> -->
     </header>
-    <main></main>
+    <main class="main">
+      <section class="advantages">
+        <h3 class="advantagesTitle">Плюсы деревянных заборов</h3>
+        <p class="advantagesText">
+          Деревянный забор для частного дома имеет<br />
+          следующие плюсы:
+        </p>
+        <div class="advantagesContainer">
+          <div class="advantage">
+            <img src="./images/lock.svg" alt="открытый замок" />
+            <p class="advantageText">Доступность</p>
+          </div>
+          <div class="advantage">
+            <img src="./images/tools.svg" alt="инструменты" />
+            <p class="advantageText">Практичность</p>
+          </div>
+          <div class="advantage">
+            <img src="./images/leaf.svg" alt="лист дерева" />
+            <p class="advantageText">Экологичность</p>
+          </div>
+          <div class="advantage">
+            <img src="./images/money.svg" alt="деньги" />
+            <p class="advantageText">Экономичность</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <script src="./index.js"></script>
   </body>
