--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
       </div>
       <div class="slider">
         <ul class="sliderList">
-          <li><div class="dot activeDot"></div></li>
-          <li><div class="dot"></div></li>
-          <li><div class="dot"></div></li>
-          <li><div class="dot"></div></li>
-          <li><div class="dot"></div></li>
+          <li class="dot activeDot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
         </ul>
         <div class="SliderBtns">
           <button class="sliderBtn previous">
