--- a/index.html
+++ b/index.html
@@ -283,8 +283,146 @@
           alt="термодревесина"
         />
       </section>
+      <section class="sliderFenceTypes">
+        <h3 class="sliderFTTitle">
+          Классификация<br />
+          заборов из дерева
+        </h3>
+        <div class="sliderFTLine" id="sliderFTLine">
+          <div class="sliderFTPage imgChristmasTree">
+            <h4 class="sliderActionTitle">Ёлочка</h4>
+            <div class="sliderFTaction">
+              <p class="sliderFTDesc">
+                Конструкция в этом случае схожа с глухим сайдингом. Но, если
+                посмотреть вблизи, то можно увидеть просветы. Это довольно
+                необычная конструкция смотрится довольно эффектно.
+              </p>
+              <button class="sliderFTOrderBtn">расчет стоимости</button>
+            </div>
+          </div>
+          <div class="sliderFTPage imgClassic">
+            <h4 class="sliderActionTitle">Ёлочка</h4>
+            <div class="sliderFTaction">
+              <p class="sliderFTDesc">
+                Конструкция в этом случае схожа с глухим сайдингом. Но, если
+                посмотреть вблизи, то можно увидеть просветы. Это довольно
+                необычная конструкция смотрится довольно эффектно.
+              </p>
+              <button class="sliderFTOrderBtn">расчет стоимости</button>
+            </div>
+          </div>
+          <div class="sliderFTPage imgLattice">
+            <h4 class="sliderActionTitle">Ёлочка</h4>
+            <div class="sliderFTaction">
+              <p class="sliderFTDesc">
+                Конструкция в этом случае схожа с глухим сайдингом. Но, если
+                посмотреть вблизи, то можно увидеть просветы. Это довольно
+                необычная конструкция смотрится довольно эффектно.
+              </p>
+              <button class="sliderFTOrderBtn">расчет стоимости</button>
+            </div>
+          </div>
+          <div class="sliderFTPage imgRancho">
+            <h4 class="sliderActionTitle">Ёлочка</h4>
+            <div class="sliderFTaction">
+              <p class="sliderFTDesc">
+                Конструкция в этом случае схожа с глухим сайдингом. Но, если
+                посмотреть вблизи, то можно увидеть просветы. Это довольно
+                необычная конструкция смотрится довольно эффектно.
+              </p>
+              <button class="sliderFTOrderBtn">расчет стоимости</button>
+            </div>
+          </div>
+          <div class="sliderFTPage imgWattle">
+            <h4 class="sliderActionTitle">Ёлочка</h4>
+            <div class="sliderFTaction">
+              <p class="sliderFTDesc">
+                Конструкция в этом случае схожа с глухим сайдингом. Но, если
+                посмотреть вблизи, то можно увидеть просветы. Это довольно
+                необычная конструкция смотрится довольно эффектно.
+              </p>
+              <button class="sliderFTOrderBtn">расчет стоимости</button>
+            </div>
+          </div>
+        </div>
+        <ul class="sliderListFT">
+          <li class="dotFT activeDotFT"></li>
+          <li class="dotFT"></li>
+          <li class="dotFT"></li>
+          <li class="dotFT"></li>
+          <li class="dotFT"></li>
+        </ul>
+      </section>
+      <section class="questions">
+        <div class="formWrapper">
+          <form action="" method="get" class="form">
+            <h3 class="formTitle">
+              Остались вопросы?
+              <h4 class="formSecondTitle">Закажите обратный звонок!</h4>
+            </h3>
+            <p class="formText">
+              Мы свяжемся с Вами и ответим на все интересующие Вас вопросы!
+            </p>
+            <input class="formInput" type="text" placeholder="Имя" />
+            <input class="formInput" type="tel" placeholder="Телефон" />
+            <button class="formBtn" type="submit">Заказать звонок</button>
+            <div class="formCheckboxContainer">
+              <input class="formCheckbox" type="checkbox" id="personalData" />
+              <label class="formLabel" for="personalData"
+                >Я согласен на обработку персональных данных</label
+              >
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <img
+        class="footerImg"
+        src="./assets/images/footer/footerFence.jpg"
+        alt="деревянный забор"
+      />
+      <div class="footerWrapper">
+        <div class="footerContainer">
+          <ul class="footerLinks">
+            <li>
+              <a href="#">О нас</a>
+            </li>
+            <li>
+              <a href="#">Каталог</a>
+            </li>
+            <li>
+              <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Оплата</a>
+            </li>
+          </ul>
+          <ul class="footerContacts">
+            <li class="footerContactsLi">
+              <img src="./assets/images/footer/phone.svg" alt="Телефон" />
+              <a href="tel:+88008888888" class="footerPhone">8 800 888 88 88</a>
+            </li>
+            <li class="footerContactsLi">
+              <img src="./assets/images/footer/mail.svg" alt="Почта" />
+              <a class="footerMail" href="mailto:mailcompany@gmail.com "
+                >mailcompany@gmail.com
+              </a>
+            </li>
+            <li class="footerContactsLi">
+              <img src="./assets/images/footer/geo.svg" alt="Гео метка" />
+              <a
+                class="footerGeo"
+                href="https://www.google.com/maps/place/%D0%BF%D1%80-%D1%82+%D0%9C%D0%B8%D1%80%D0%B0,+35,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F,+129110/@55.7824959,37.631527,17z/data=!3m1!4b1!4m6!3m5!1s0x46b54a739f208ef5:0x4cf092e3ab932211!8m2!3d55.7824929!4d37.6337157!16s%2Fg%2F11hbn8vsm0"
+              >
+                г. Москва ул. Мира 35/2
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/slider2.js"></script>
   </body>
 </html>
